--- a/src/assets/css/styleku.css
+++ b/src/assets/css/styleku.css
@@ -4,9 +4,13 @@
   box-sizing: border-box;
 }
 
+body {
+  background: #f3f3f9;
+}
+
 /* control page login */
 .real h4 {
-  font-size: 15px;
+  font-size: 17px;
   text-align: center;
   font-style: italic;
   font-family: "Monserat";
@@ -106,6 +110,16 @@
   align-items: center;
   margin-left: 50%;
   margin-right: 50%;
+}
+
+.card-header {
+  background: #ffffff;
+}
+
+.card-header h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: #495057;
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
