update all page user

--- a/src/pages/landingPage.module.css
+++ b/src/pages/landingPage.module.css
@@ -1,4 +1,4 @@
-.body{
+/* .body{
   background-color: #f3f3f9
   ;
 }
@@ -10,10 +10,10 @@
   width: 85%;
   height: 65%;
   /* margin: -180px 10px 50px; */
-  border-radius: 10px;
+/* border-radius: 10px;
   box-shadow: 4px 4px 10px rgb(170, 170, 170), -4px -4px 10px lightgray;
   cursor: pointer;
   margin-top: 50px;
   margin-left: 45px;
-  margin-bottom: 5x;
-}
+  margin-bottom: 5x; */
+/* } */
