--- a/src/assets/css/styleku.css
+++ b/src/assets/css/styleku.css
@@ -195,6 +195,87 @@ body {
   list-style: none;
 }
 
+/* caraousel */
+:root {
+  --heights: 50vh;
+  --widths: 100%;
+}
+
+.slider-container {
+  height: var(--heights);
+  width: var(--widths);
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+}
+
+.active {
+  display: inline-block;
+}
+
+.inactive {
+  display: none;
+}
+
+.slides {
+  height: var(--heights);
+  width: var(--widths);
+  position: relative;
+}
+
+.slide-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+}
+
+.slide-title,
+.slide-text {
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  text-align: center;
+  top: 40%;
+}
+
+.slide-text {
+  top: 65%;
+  font-size: 2rem;
+}
+
+.prev,
+.next {
+  color: transparent;
+  cursor: pointer;
+  z-index: 100;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 1rem;
+  margin-top: -3rem;
+  font-size: 40px;
+  font-weight: bold;
+  border-radius: 0px 5px 5px 0px;
+}
+.slider-container:hover .dot:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.slider-container:hover .active-dot {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.play-pause {
+  color: black;
+}
+.tiket-siterbang {
+  font-size: 20px;
+  font-family: sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 @media (min-width: 768px) and (max-width: 991.98px) {
   .gradient-custom-2 {
     display: none;
@@ -249,6 +330,13 @@ body {
     width: auto;
     border-radius: 8px;
     color: white;
+  }
+  .bearer h1,
+  h5 {
+    font-size: 22px;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
   }
 }
 
