--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -45,36 +45,6 @@
   text-align: center;
   font-family: sans-serif;
 }
-.xysss h1 {
-  font-size: 70px;
-  font-family: sans-serif;
-  color: #fdff00;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.xysss p {
-  color: white;
-  font-family: sans-serif;
-  font-weight: 500;
-  font-style: italic;
-  font-variant: inherit;
-}
-
-.btn-pokemon {
-  border: none;
-  width: 100px;
-  height: 30px;
-  border-radius: 20px;
-  background: #fdff00;
-  color: #06283d;
-  margin-top: 5px;
-}
-
-.btn-pokemon:hover {
-  background: #256d85;
-  color: white;
-}
 
 .blous h6 {
   color: #35405a;
@@ -179,4 +149,147 @@
   font-family: "Tangerine", cursive;
   text-align: center;
   padding: 40px;
+}
+
+/* handle responsive one width tablet */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .bearer {
+    width: 100%;
+    position: absolute;
+    top: 23%;
+    transform: translateY(-0%);
+    text-align: justify;
+    font-family: sans-serif;
+  }
+
+  .bearer h1 {
+    color: white;
+    font-size: 55px;
+    font-weight: 700;
+    text-align: left;
+    font-style: normal;
+    font-family: "Poppins";
+    text-transform: uppercase;
+  }
+
+  .bearer h5 {
+    color: white;
+    text-align: center;
+    font-size: 25px;
+    text-align: left;
+    font-weight: 800;
+    font-style: italic;
+    font-family: sans-serif;
+  }
+
+  .xysss {
+    width: 100%;
+    position: absolute;
+    top: 80%;
+    transform: translateY(-0%);
+    text-align: center;
+    font-family: sans-serif;
+  }
+
+  .blous h6 {
+    font-size: 25px;
+    font-weight: 500;
+    font-family: sans-serif;
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  .phones {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .tablet-brand {
+    margin-top: 70px;
+    margin-bottom: 50px;
+  }
+}
+
+/* handle responsive Handphone */
+@media (max-width: 599px) {
+  #bg-sIterbang {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img-plane/2393207684.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .bearer {
+    width: 100%;
+    position: absolute;
+    top: 18%;
+    transform: translateY(-0%);
+    text-align: justify;
+    font-family: sans-serif;
+  }
+
+  .bearer h1 {
+    color: white;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: left;
+    font-style: normal;
+    font-family: "Poppins";
+    text-transform: uppercase;
+  }
+  .bearer h5 {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    text-align: left;
+    font-weight: 700;
+    font-style: italic;
+    font-family: sans-serif;
+  }
+  .xysss {
+    width: 100%;
+    position: absolute;
+    top: 65%;
+    transform: translateY(-0%);
+    text-align: center;
+    font-family: sans-serif;
+  }
+
+  .phoneT {
+    margin-top: 30px;
+  }
+
+  .phone-maskapai {
+    margin-top: 30%;
+  }
+
+  .phone-branded {
+    margin-top: 30px;
+  }
+
+  .xyrea {
+    margin-top: 35%;
+  }
+
+  .radiose {
+    margin-left: 50%;
+  }
+
+  .phones {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .blous h6 {
+    font-size: 25px;
+    font-weight: 500;
+    font-family: sans-serif;
+    text-align: center;
+    margin-bottom: 0;
+  }
 }
