--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -151,6 +151,10 @@
   padding: 40px;
 }
 
+.siterbang-bg {
+  background: #6c63ff;
+}
+
 /* handle responsive one width tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .bearer {
