--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -155,6 +155,51 @@
   background: #6c63ff;
 }
 
+/* handle hover glow */
+.card {
+  cursor: pointer;
+}
+
+.card:hover {
+  animation: pullstate 5s ease-in;
+}
+
+@keyframes pullstate {
+  0% {
+    box-shadow: 0 0 25px #6c63ff, 0 0 50px #fff;
+  }
+}
+/* end script hover glow */
+
+.bgry {
+  font-family: sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  text-align: justify;
+  font-size: 12px;
+  color: white;
+}
+
+.col-xl-3 h6 {
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.col-xl-3 p {
+  cursor: pointer;
+}
+
+.col-lg-2 h6 {
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.col-lg-2 p {
+  cursor: pointer;
+}
+
 /* handle responsive one width tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .bearer {
