--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -275,6 +275,18 @@
   font-weight: bold;
 }
 
+.bg-users {
+  background: rgb(247, 245, 242);
+}
+
+.type-siterbang {
+  font-size: 7px;
+}
+
+.bg-terbang {
+  color: #6c63ff;
+}
+
 /* handle responsive one width tablet */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .bearer {
